force-app/main/default/objects/KushtarObject__c/KushtarObject__c.object-meta.xml
<CustomObject>
    <label>KushtarObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KushtarObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>