force-app/main/default/objects/KushtarObject__c/fields/Trans_Date__c.field-meta.xml
<CustomField>
    <fullName>Trans_Date__c</fullName>
    <label>Trans Date</label>
    <type>Date</type>
</CustomField>