force-app/main/default/objects/KushtarObject__c/fields/Trans_Id__c.field-meta.xml
<CustomField>
    <fullName>Trans_Id__c</fullName>
    <label>Trans Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>