force-app/main/default/objects/KushtarObject__c/fields/TriggerText__c.field-meta.xml
<CustomField>
    <fullName>TriggerText__c</fullName>
    <label>TriggerText</label>
    <type>TextArea</type>
</CustomField>